Bug 1682313 - Make sure mMaxLength exists in SetSelectionRange r=masayuki

Cloning a textarea element without a dirty value flag does not call SetValue() and thus gets no max length. This makes sure it always gets one before setting selection range.

Differential Revision: https://phabricator.services.mozilla.com/D99734